alba/icat_plus/icat-plus-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: icat
  labels:
    app: icat-plus
    component: web
  name: icat-plus-service
spec:
  ports:
    - name: "8000"
      port: 8000
      targetPort: 80
  selector:
    app: icat-plus
    component: web
status:
  loadBalancer: {}
